--- a/arch/arm/configs/cm_golden_defconfig
+++ b/arch/arm/configs/cm_golden_defconfig
@@ -36,8 +36,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-novafusion"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -53,7 +53,7 @@ CONFIG_BSD_PROCESS_ACCT=y
 # CONFIG_BSD_PROCESS_ACCT_V3 is not set
 # CONFIG_FHANDLE is not set
 # CONFIG_TASKSTATS is not set
-# CONFIG_AUDIT is not set
+CONFIG_AUDIT=y
 CONFIG_HAVE_GENERIC_HARDIRQS=y
 
 #
@@ -75,8 +75,7 @@ CONFIG_RCU_FANOUT=32
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 # CONFIG_IKCONFIG is not set
-CONFIG_LOG_BUF_SHIFT=17
-CONFIG_SAMSUNG_LOG_BUF=y
+CONFIG_LOG_BUF_SHIFT=18
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 # CONFIG_CGROUP_FREEZER is not set
@@ -174,11 +173,11 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_SIO is not set
 CONFIG_DEFAULT_NOOP=y
-# CONFIG_DEFAULT_SIOPLUS is not set
 CONFIG_DEFAULT_IOSCHED="noop"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
@@ -300,24 +299,7 @@ CONFIG_MACH_SAMSUNG_U8500=y
 #
 # Samsung Ux500 Options
 #
-CONFIG_SAMSUNG_KERNEL_DEBUG=y
-# CONFIG_SAMSUNG_KERNEL_DEBUG_USER is not set
-CONFIG_SAMSUNG_USE_GETLOG=y
-CONFIG_SAMSUNG_ADD_GAFORENSICINFO=y
-# CONFIG_SAMSUNG_USE_LOGGER_ADDON is not set
-CONFIG_SAMSUNG_PASS_PLATFORM_LOG_TO_KERNEL=y
-CONFIG_SAMSUNG_USE_SEC_LOG_BUF=y
-# CONFIG_SAMSUNG_USE_LAST_SEC_LOG_BUF is not set
 # CONFIG_CONNECTOR_SAMSUNG_3PI is not set
-
-#
-# SAMSUNG Common Debugging Features
-#
-CONFIG_SEC_DEBUG=y
-# CONFIG_SEC_DEBUG_SCHED_LOG is not set
-# CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
-CONFIG_SEC_DEBUG_USER=y
-# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
 CONFIG_MACH_SAMSUNG_UX500=y
 CONFIG_KEYLAYOUT_LAYOUT1=y
 # CONFIG_KEYLAYOUT_LAYOUT2 is not set
@@ -333,13 +315,6 @@ CONFIG_MACH_SEC_GOLDEN=y
 # Samsung Product Features
 #
 # CONFIG_SAMSUNG_PRODUCT_SHIP is not set
-CONFIG_SEC_DEBUG_LEVEL=1
-CONFIG_SAMSUNG_PANIC_DISPLAY_DEVICES=y
-CONFIG_SAMSUNG_PANIC_DISPLAY_PMIC=y
-# CONFIG_SAMSUNG_PANIC_DISPLAY_I2C_PERIPHS is not set
-# CONFIG_SAMSUNG_PANIC_DISPLAY_LSOF is not set
-CONFIG_SAMSUNG_PANIC_LCD_DISPLAY=y
-CONFIG_SAMSUNG_EXTRA_DIE_ACTION=y
 CONFIG_DBX500_SCHED_CLOCK_PRCMU=y
 # CONFIG_DBX500_MTU_SCHED_CLOCK is not set
 CONFIG_UX500_DEBUG_UART=2
@@ -374,7 +349,7 @@ CONFIG_UX500_SUSPEND_STANDBY=y
 CONFIG_UX500_SUSPEND_MEM=y
 CONFIG_UX500_SUSPEND_DBG=y
 CONFIG_UX500_SUSPEND_DBG_WAKE_ON_UART=y
-# CONFIG_UX500_USECASE_GOVERNOR is not set
+CONFIG_UX500_USECASE_GOVERNOR=y
 CONFIG_DB8500_PWR_TEST=y
 
 #
@@ -446,8 +421,8 @@ CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
 CONFIG_ARM_CPU_TOPOLOGY=y
-CONFIG_SCHED_MC=y
-CONFIG_SCHED_SMT=y
+# CONFIG_SCHED_MC is not set
+# CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 CONFIG_HAVE_ARM_TWD=y
 CONFIG_VMSPLIT_3G=y
@@ -527,14 +502,20 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ABYSSPLUG is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_HOTPLUG=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
@@ -699,6 +680,7 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 #
 # Xtables targets
 #
+# CONFIG_NETFILTER_XT_TARGET_AUDIT is not set
 # CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
@@ -1821,7 +1803,7 @@ CONFIG_RADIO_ADAPTERS=y
 CONFIG_GPU_MALI=y
 CONFIG_MALI400=y
 CONFIG_MALI400_DEBUG=y
-CONFIG_MALI400_PROFILING=y
+# CONFIG_MALI400_PROFILING is not set
 CONFIG_MALI400_GPU_UTILIZATION=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -1861,6 +1843,8 @@ CONFIG_MCDE_DISPLAY_DSI=y
 # CONFIG_MCDE_DISPLAY_KYLE_DSI is not set
 # CONFIG_MCDE_DISPLAY_SAMSUNG_S6D16D0 is not set
 CONFIG_MCDE_DISPLAY_S6E63M0_DSI=y
+# CONFIG_MCDE_DISPLAY_NT35512_DSI is not set
+# CONFIG_MCDE_DISPLAY_M1316A0_DSI is not set
 # CONFIG_MCDE_DISPLAY_TOSHIBA_DSI2LVDS is not set
 # CONFIG_MCDE_DISPLAY_HIMAX_HX8392 is not set
 # CONFIG_MCDE_DISPLAY_SONY_ACX424AKP_DSI is not set
@@ -2192,8 +2176,8 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
-CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE is not set
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_ANDROID_PHONET=y
 # CONFIG_USB_CDC_COMPOSITE is not set
@@ -2263,7 +2247,9 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 #
 # LED Triggers
 #
-# CONFIG_NFC_DEVICES is not set
+CONFIG_NFC_DEVICES=y
+# CONFIG_PN544_NFC is not set
+CONFIG_PN547_NFC=y
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
@@ -2452,6 +2438,7 @@ CONFIG_SENSORS_ALPS_CORE=y
 CONFIG_SENSORS_GOLDEN=y
 # CONFIG_SENSORS_HSCDTD008A is not set
 # CONFIG_SENSORS_BMA254 is not set
+# CONFIG_BMA254_SMART_ALERT is not set
 CONFIG_PROXIMITY=y
 # CONFIG_PROXIMITY_CM3607 is not set
 CONFIG_PROXIMITY_GP2A=y
@@ -2485,16 +2472,17 @@ CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR=m
 #
 # File systems
 #
-CONFIG_EXT2_FS=y
-# CONFIG_EXT2_FS_XATTR is not set
-# CONFIG_EXT2_FS_XIP is not set
+# CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
-# CONFIG_EXT4_FS_XATTR is not set
+CONFIG_EXT4_FS_XATTR=y
+# CONFIG_EXT4_FS_POSIX_ACL is not set
+CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
+CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
@@ -2533,7 +2521,6 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_EXFAT_FS is not set
 # CONFIG_NTFS_FS is not set
 
 #
@@ -2571,6 +2558,12 @@ CONFIG_WTL_ENCRYPTION_FILTER=y
 # CONFIG_PSTORE is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
@@ -2895,6 +2888,7 @@ CONFIG_CRC16=y
 CONFIG_CRC32=y
 CONFIG_CRC7=y
 CONFIG_LIBCRC32C=y
+CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 # CONFIG_XZ_DEC is not set
